--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@
 /public/assets
 .byebug_history
 
+# Ignore config
+/config/application.yml
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
